# proj_situated_2

./: pyproject.toml
src/robotics_rl/: db.sqlite3  exercise_2_nb.ipynb  exercise_3.ipynb  exercise_3_sac_train.py  exercise_3_tqc_train.py  hyperparams.yaml  quickstart_guide.ipynb  record_video.py  results_chart_exercise3.ipynb  schemas.py  utils.py
src/robotics_rl/hyperparams/: td3.yml
src/robotics_rl/hyperparams_her/: ddpg.yml
src/robotics_rl/logs/ddpg/FetchReach-v4_1/: 0.monitor.csv  evaluations.npz
src/robotics_rl/logs/ddpg/FetchReach-v4_2/: 0.monitor.csv  evaluations.npz
src/robotics_rl/logs/ddpg/FetchReach-v4_3/: 0.monitor.csv  evaluations.npz
src/robotics_rl/logs/ddpg/FetchReachDense-v4_1/: 0.monitor.csv
src/robotics_rl/logs/ddpg/FetchReachDense-v4_5/: 0.monitor.csv  evaluations.npz
src/robotics_rl/logs/ddpg/FetchReachDense-v4_6/: 0.monitor.csv  evaluations.npz
src/robotics_rl/logs/ddpg/FetchReachDense-v4_7/: 0.monitor.csv  evaluations.npz
src/robotics_rl/logs/ddpg/FetchReachDense-v4_8/: 0.monitor.csv  evaluations.npz
src/robotics_rl/logs/fetch_pick_place_her_sac/: eval_monitor.csv  evaluations.npz  train_monitor.csv
src/robotics_rl/logs/fetch_pick_place_her_tqc/: eval_monitor.csv  evaluations.npz  train_monitor.csv
src/robotics_rl/logs/reward_shaping/: evaluations.npz  evaluations2.npz
src/robotics_rl/logs/sac/FetchReach-v4_1/: 0.monitor.csv  evaluations.npz
src/robotics_rl/logs/sac/FetchReach-v4_2/: 0.monitor.csv  evaluations.npz
src/robotics_rl/logs/sac/FetchReach-v4_3/: 0.monitor.csv  evaluations.npz
(+86 files in other folders)
