[project]
name = "robotics-rl"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium (>=1.2.3,<2.0.0)",
    "rl-zoo3 (>=2.7.0,<3.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "ipython (>=9.9.0,<10.0.0)",
    "gymnasium-robotics (>=1.4.2,<2.0.0)",
    "optuna (>=4.7.0,<5.0.0)",
    "torch (==2.6.0)"
]

[tool.poetry]
packages = [{include = "robotics_rl", from = "src"}]


[[tool.poetry.source]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[tool.poetry.dependencies]
torch = {version = "2.6.0", source = "pytorch-cu124"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
